feat: add base setting(incomplete)
Signed-off-by: sulmo <sulmo@megazone.com>

--- a/apps/storybook7/package.json
+++ b/apps/storybook7/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "vite",
+    "dev": "storybook dev -p 6006",
     "build": "vite build",
     "preview": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "author": "",
@@ -18,6 +17,7 @@
     "@storybook/addon-essentials": "^7.6.10",
     "@storybook/addon-interactions": "^7.6.10",
     "@storybook/addon-links": "^7.6.10",
+    "@storybook/addon-postcss": "^2.0.0",
     "@storybook/blocks": "^7.6.10",
     "@storybook/builder-vite": "^8.0.10",
     "@storybook/test": "^7.6.10",
@@ -25,9 +25,12 @@
     "@storybook/vue-vite": "^7.6.10",
     "@types/react": "^18.3.2",
     "@vitejs/plugin-vue2": "^2.3.1",
+    "eslint-config-custom": "*",
+    "postcss-config-custom": "*",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "storybook": "^7.6.10",
+    "tsconfig": "*",
     "vite": "^5.2.11"
   }
 }
